fix: adjust burger menu styling and functionality for improved visibility and interaction

--- a/src/assets/css/menu.css
+++ b/src/assets/css/menu.css
@@ -17,7 +17,6 @@
   position: absolute;
   height: 4px;
   width: 100%;
-  background: var(--secondary-color);
   border-radius: 9px;
   opacity: 1;
   left: 0;
